Improve maven builder setup.
- Correct _JAVA_OPTIONS with preferred OpenJDK
  tunables.
- Set jnlp container limit to 256m as it'll use
  32 bit JDK with new options.
- Pull in updated maven images which allow the
  above settings to work.